# opengl-cpp

./: CMakeLists.txt
include/opengl-cpp/: buffer.h  enumerates.h  identifier_t.h  program.h  shader.h  texture.h  vertex_array.h
include/opengl-cpp/backend/: gl.h  gl_impl.h  glfw.h  glfw_impl.h
src/: buffer.cpp  gl_impl.cpp  glfw_impl.cpp  program.cpp  shader.cpp  texture.cpp  vertex_array.cpp
test/: CMakeLists.txt
test/runtime/: shader.vert
test/src/: gl_mock.h  glfw_mock.h  test_buffer.cpp  test_shader.cpp  test_texture.cpp
